--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-images": "^1.2.0-beta.7",
