--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-js-pagination": "^3.0.3",
     "react-kakao-maps-sdk": "^1.1.3",
     "react-photo-gallery": "^8.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-image-viewer": "^1.2.2",
