--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-simple-image-viewer": "^1.2.2",
     "sass": "^1.54.4",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.0",
     "zlib": "^1.0.5"
   },
