--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "react-js-pagination": "^3.0.3",
     "react-kakao-maps-sdk": "^1.1.3",
     "react-photo-gallery": "^8.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-simple-image-viewer": "^1.2.2",
     "sass": "^1.54.4",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.0"
+    "swiper": "^8.3.2",
+    "web-vitals": "^2.1.0",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
